<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ingresa">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="224dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/salud"
    />

    <EditText
        android:id="@+id/correoIngresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="15"
        android:hint="@string/correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/contrasenaIngresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:hint="@string/contrasena"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoIngresa" />

    <Button
        android:id="@+id/botonIngreso"
        android:layout_width="wrap_content"
        android:backgroundTint="@android:color/holo_green_light"
        android:textColor="@android:color/background_light"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="20dp"
        android:text="@string/ingresarBoton"

        app:layout_constraintBottom_toTopOf="@+id/botonOlvidoContrasena"
        app:layout_constraintStart_toStartOf="@+id/contrasenaIngresa"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaIngresa"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/botonOlvidoContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="88dp"
        android:text="@string/olvidoContrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaIngresa" />

    <Button
        android:id="@+id/botonRegistro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="228dp"
        android:text="@string/registro"
        app:layout_constraintBottom_toTopOf="@+id/botonOlvidoContrasena"
        app:layout_constraintEnd_toEndOf="@+id/contrasenaIngresa"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaIngresa"
        app:layout_constraintVertical_bias="0.105" />


</androidx.constraintlayout.widget.ConstraintLayout>